5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1675_2471.log
== TEST (2019-05-17 16:20:13) 
-- CODE:
idade = int(input("idade: ")
imc = float(input("IMC: "))

e = ("Entradas: ", idade, "anos ", "e ","IMC ", imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<"45" and imc < "22"):
	print(e)
	print(r3)
-- ERROR:
File "XXXX", line 2
    imc = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:21:08) 
-- CODE:
idade = int(input("idade: ")
imc = float(input("IMC: "))

e = ("Entradas: ", idade, "anos ", "e ","IMC ", imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<"45" and imc < "22"):
	print(e)
	print(r3)
-- ERROR:
File "XXXX", line 2
    imc = float(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:21:31) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: ", idade, "anos ", "e ","IMC ", imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<"45" and imc < "22"):
	print(e)
	print(r3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    if(idade<"45" and imc < "22"):
TypeError: '<' not supported between instances of 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:22:38) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: ", idade, "anos ", "e ","IMC ", imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- OUTPUT:
('Entradas: ', 0, 'anos ', 'e ', 'IMC ', 0.0)
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:23:37) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: " idade "anos " "e " "IMC " imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- ERROR:
File "XXXX", line 4
    e = ("Entradas: " idade "anos " "e " "IMC " imc )				
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:24:17) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:24:17) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:24:28) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    e = ("Entradas: " + idade + "anos " + "e "+"IMC " + imc )				
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:25:33) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: ",  idade,  "anos ",  "e ", "IMC ",  imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- OUTPUT:
('Entradas: ', 0, 'anos ', 'e ', 'IMC ', 0.0)
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:25:36) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: ",  idade,  "anos ",  "e ", "IMC ",  imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- OUTPUT:
('Entradas: ', 0, 'anos ', 'e ', 'IMC ', 0.0)
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:25:38) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = ("Entradas: ",  idade,  "anos ",  "e ", "IMC ",  imc )				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- OUTPUT:
('Entradas: ', 0, 'anos ', 'e ', 'IMC ', 0.0)
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:26:38) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

e = Entradas: idade anos e IMC imc 				
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print(e)
	print(r3)
-- ERROR:
File "XXXX", line 4
    e = Entradas: idade anos e IMC imc 				
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-17 16:28:49) 
-- CODE:
idade = int(input("idade: "))
imc = float(input("IMC: "))

 			
d = "Dados invalidos"
r1 = "Risco: Alto "  				
r2 = "Risco: Médio"
r3 = "Risco: Baixo"
				
if(idade<45 and imc < 22):
	print("Entradas:", idade, "anos","e","IMC", imc)				

	print(r3)
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
